--- a/AAWoL/AAWoL/Base.lproj/Main.storyboard
+++ b/AAWoL/AAWoL/Base.lproj/Main.storyboard
@@ -26,6 +26,7 @@
                                 </constraints>
                                 <items>
                                     <navigationItem title="AAWoL" id="eTE-Lb-lXA">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="viL-iA-U79"/>
                                         <rightBarButtonItems>
                                             <barButtonItem systemItem="add" id="lNl-jj-AnK"/>
                                             <barButtonItem systemItem="action" id="pgz-Lg-D9T"/>
@@ -33,18 +34,26 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bKs-3N-G8t">
+                                <rect key="frame" x="20" y="64" width="560" height="516"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="bKs-3N-G8t" firstAttribute="top" secondItem="RHm-jQ-g76" secondAttribute="bottom" constant="20" id="9hA-jy-eQa"/>
+                            <constraint firstItem="bKs-3N-G8t" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dEF-IN-tQm"/>
                             <constraint firstItem="RHm-jQ-g76" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="gtM-d1-mEq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="RHm-jQ-g76" secondAttribute="trailing" constant="-20" id="gy1-gf-qx9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bKs-3N-G8t" secondAttribute="bottom" constant="20" id="rHW-5N-6sV"/>
                             <constraint firstItem="RHm-jQ-g76" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="vS1-8D-SZc"/>
+                            <constraint firstItem="bKs-3N-G8t" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="x8M-8y-TT0"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="301" y="353"/>
+            <point key="canvasLocation" x="300" y="353"/>
         </scene>
         <!--Add View Controller-->
         <scene sceneID="ne3-aU-U8S">
